<resources>
    <string name="app_name">COMP304_TermProject</string>
    <string name="bgImgDesc">Watch with calorie tracker</string>
    <string name="logoDesc">Calorie Tracker</string>
    <string name="mainTitle">Count able+</string>
    <string name="app_desc">Making the calories matter.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fullName">Enter your full name</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="height">Height in cm</string>
    <string name="weight">Weight in kg</string>
    <string name="email">Enter your email</string>
    <string name="activityLevelQuestion">How active are you?</string>
    <string name="dob">Enter your DOB</string>
    <string name="weightGoal">What is your goal?</string>
    <string name="weeklyGoal">What is your weekly goal?</string>
    <string name="submit">Submit</string>
    <string name="nav_account">Account</string>
    <string name="nav_diary">Food Diary</string>
    <string name="nav_sms">SMS</string>
    <string name="btnAddFood">Add</string>
    <string name="add_food_item">Add food item</string>

    <string-array name="activityLevel_array">
        <item>Sedentary</item>
        <item>Lightly Active</item>
        <item>Active</item>
        <item>Very Active</item>
    </string-array>

    <string-array name="weightGoal_array">
        <item>To gain weight (muscle)</item>
        <item>To lose weight (fat)</item>
        <item>To maintain weight</item>
    </string-array>

    <string-array name="weeklyGoal_array">
        <item>Gain/Lose 0.45 kg (1 lb) per week</item>
        <item>Gain/Lose 0.9 kg (2 lb) per week</item>
        <item>To maintain weight</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_full_name">Full name:</string>
    <string name="your_username">Username:</string>
    <string name="your_sex">Sex:</string>
    <string name="your_dob">Date of Birth:</string>
    <string name="your_height">Height (cm):</string>
    <string name="your_weight">Weight (kg):</string>
    <string name="your_activityLevel">Activity Level:</string>
    <string name="your_goal">Goal:</string>
    <string name="your_weeklyGoal">Weekly Goal:</string>
</resources>
