<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MidnightBlue2"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/calorie_tracker"
        android:contentDescription="@string/bgImgDesc"/>

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="280dp"
        android:text="@string/username"
        android:textSize="@dimen/subtitle1_font_size"
        android:textStyle="bold"
        android:textColor="@color/White"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="190dp"
        android:text="@string/password"
        android:textSize="@dimen/subtitle1_font_size"
        android:textStyle="bold"
        android:textColor="@color/White"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/tv_username"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="230dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:background="@drawable/rounded_rectangle"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/tv_username"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="140dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@drawable/rounded_rectangle"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:background="@drawable/rounded_rectangle_button"
        android:text="@string/login"
        android:textColor="@color/White"
        android:textStyle="bold"/>


</RelativeLayout>